# CeminiDFS

./: .env.example  .gitignore  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.cursor/: mcp.json
briefs/: 2026-06-21_k125-nfl-repo-eval-epa-cleanroom.md  2026-06-22_k126-nfl-coherence-risk-steal.md  2026-06-23_k127-sportsdataverse-py-adopt.md  2026-06-24_bbm7-draft-copilot-implementation-brief.md  2026-06-24_bbm7-p1-implementation-plan.md  2026-06-24_bbm7-p2-implementation-plan.md  2026-06-24_bbm7-p4-pre-entry-implementation-plan.md  2026-06-24_bbm7-phase3-implementation-plan.md  2026-06-24_bbm7-super-audit-patch-plan.md  2026-06-24_bbm7-super-audit-synthesis.md  2026-06-24_k128-metaplan-dfs-tools-reference.md  2026-06-25_hygiene-implementation-plan.md  2026-06-25_k129-implementation-plan.md  2026-06-25_k129-sleeper-api-reference.md  2026-07-01_cursor-audit-fix-plan.md  2026-07-01_cursor-audit-synthesis.md  2026-07-01_k138-implementation-plan.md  2026-07-02_cursor-audit-reaudit-synthesis.md  2026-07-02_p1-reaudit-fix-plan.md  2026-07-02_research-backlog-fix-plan.md  2026-07-03_research-triage-plan.md  2026-07-05_research-triage-plan.md  2026-07-08_bbm-golden-draft-fix-plan.md  2026-07-10_research-triage-plan.md  2026-07-10_underdog-board-selector-fix-plan.md  2026-07-11_k159-fable-advisor-pipeline-cost-steal.md  2026-07-11_research-triage-plan.md  2026-07-11_underdog-dom-capture.md  2026-07-14_k163-maths-compendium-mcp-extract.md  bbm7-draft-card-2026-06-24.md
config/: nfl_dfs.yaml  nfl_dfs_gpp.yaml
docs/: ARCHITECTURE.md  BBM-EXPOSURE.md  BBM.md  GPP-WORKFLOW.md  coherence-risk-audit.md  epa-cleanroom-audit.md  espn-api-eval.md  (+5 more)
(+173 files in other folders)
